test/classes/stonea/constAndParamInConstructor.good
constAndParamInConstructor.chpl:4: In initializer 'Foo':
constAndParamInConstructor.chpl:4: error: invalid access of class member in initializer header
constAndParamInConstructor.chpl:12: In initializer 'Bar':
constAndParamInConstructor.chpl:12: error: invalid access of class member in initializer header
